--- a/index.html
+++ b/index.html
@@ -9,39 +9,39 @@
 
 
   <div class="keys">
-    <div data-key="65" class="key">
+    <div data-key="65" class="key" onclick="handleClick(this)">
       <kbd>A</kbd>
       <span class="sound">clap</span>
     </div>
-    <div data-key="83" class="key">
+    <div data-key="83" class="key" onclick="handleClick(this)">
       <kbd>S</kbd>
       <span class="sound">hihat</span>
     </div>
-    <div data-key="68" class="key">
+    <div data-key="68" class="key" onclick="handleClick(this)">
       <kbd>D</kbd>
       <span class="sound">kick</span>
     </div>
-    <div data-key="70" class="key">
+    <div data-key="70" class="key" onclick="handleClick(this)">
       <kbd>F</kbd>
       <span class="sound">openhat</span>
     </div>
-    <div data-key="71" class="key">
+    <div data-key="71" class="key" onclick="handleClick(this)">
       <kbd>G</kbd>
       <span class="sound">boom</span>
     </div>
-    <div data-key="72" class="key">
+    <div data-key="72" class="key" onclick="handleClick(this)">
       <kbd>H</kbd>
       <span class="sound">ride</span>
     </div>
-    <div data-key="74" class="key">
+    <div data-key="74" class="key" onclick="handleClick(this)">
       <kbd>J</kbd>
       <span class="sound">snare</span>
     </div>
-    <div data-key="75" class="key">
+    <div data-key="75" class="key" onclick="handleClick(this)">
       <kbd>K</kbd>
       <span class="sound">tom</span>
     </div>
-    <div data-key="76" class="key">
+    <div data-key="76" class="key" onclick="handleClick(this)">
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
@@ -58,24 +58,40 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
+  function playSound(audioId) {
+    const audio = document.querySelector(`audio[data-key="${audioId}"]`);
+
+    if (!audio) return;
+
+    audio.currentTime = 0;
+    audio.play();
+  }
+
+  function transition(id) {
+    const key = document.querySelector(`div[data-key="${id}"]`);
+    key.classList.add('playing');
+  }
+
   function removeTransition(e) {
     if (e.propertyName !== 'transform') return;
     e.target.classList.remove('playing');
   }
 
-  function playSound(e) {
-    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
-    const key = document.querySelector(`div[data-key="${e.keyCode}"]`);
-    if (!audio) return;
+  function handleKeyDown(e) {
+    playSound(e.keyCode);
+    transition(e.keyCode);
+  }
 
-    key.classList.add('playing');
-    audio.currentTime = 0;
-    audio.play();
+  function handleClick(element) {
+    const audioId = element.getAttribute('data-key');
+    playSound(audioId);
+    transition(audioId);
   }
 
   const keys = Array.from(document.querySelectorAll('.key'));
+
   keys.forEach(key => key.addEventListener('transitionend', removeTransition));
-  window.addEventListener('keydown', playSound);
+  window.addEventListener('keydown', handleKeyDown);
 </script>
 
 
